fixed login and reg form popup alignment

--- a/MVCProject/WebContent/css/master.css
+++ b/MVCProject/WebContent/css/master.css
@@ -48,7 +48,7 @@ body{
 
 #dropit {
 
-	width: 333px;
+	width: 300px;
 	
 }
 
